Updated PR handler
